small alignment fix for the conversation close button

--- a/app/react/components/sizung/components/ConversationObjectList/index.css
+++ b/app/react/components/sizung/components/ConversationObjectList/index.css
@@ -137,7 +137,7 @@
 
 .conversation-close-button {
   display: none;
-  padding: 10px;
+  padding: 12px 10px;
   float: left;
 }
 
